--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ layout: default
                     {% include resumer_04-experience.html %}
 
                     {% include resumer_05-certification.html %}
+                    <img src="_includes/PIO.png" alt="PIO PORT DIAGRAM" width="450" height="300">
 
                     {% include resumer_06-personal_project.html %}
                         
