--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
                     {% include resumer_04-experience.html %}
 
                     {% include resumer_05-certification.html %}
-                    <img src="_includes/PIO.png" alt="PIO PORT DIAGRAM" width="450" height="300">
+                    <img src="BANNERS.png" alt="PIO PORT DIAGRAM">
 
                     {% include resumer_06-personal_project.html %}
                         
